test/core/errors/expressions_error/zs/non_constant_string_concatenation_error.zs
package non_constant_string_concatenation_error;

struct NonConstantStringConcatenationError
{
    string data;

    function string wrong()
    {
        return "Some string " + data;
    }
};
